--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/lab": "^7.0.0-beta.12",
+    "@mui/material": "^7.1.0",
+    "@mui/styled-engine-sc": "^7.1.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.5",
@@ -22,7 +28,10 @@
     "react-parallax-tilt": "^1.7.295",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
+    "react-slick": "^0.30.3",
     "react-vertical-timeline-component": "^3.5.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.5",
     "three": "^0.176.0"
   },
