--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
-    "@react-three/drei": "^10.0.7",
+    "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.1.5",
     "framer-motion": "^12.11.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.508.0",
     "maath": "^0.10.8",
+    "meshline": "^3.3.1",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -35,7 +39,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.5",
-    "three": "^0.176.0"
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
