--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-vertical-timeline-component": "^3.5.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.5",
     "three": "^0.167.1"
   },
